# cppstokes_benchmarks

./: .gitignore  CMakeLists.txt  README.md  amgcl_spc.cpp  amgcl_spc_pore.cpp  amgcl_spc_pre.cpp  amgcl_v1.cpp  pardiso.cpp  partition.cpp  petsc_fs.cpp  petsc_read.cpp  petsc_read.hpp  petsc_v1.cpp  problems.py  run.sh  schurpc_mixed.cpp
